Fix spacing issues in mobile

--- a/_sass/elements/footer.scss
+++ b/_sass/elements/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    padding: 9.6rem 4.8rem;
+    padding: 9.6rem 4.8rem 2.4rem;
     border-top: 1px solid var(--color-light);
 
     display: flex;
