--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -41,10 +41,14 @@ body {
     font-size: 2.4rem;
     font-weight: 400;
     line-height: 1;
+
     color: var(--color-darkest);
+    background-color: var(--color-main);
+
     /* Only works when there's nothing positioned absolute in relation to body */
     overflow-x: hidden;
-    background-color: var(--color-main);
+    position: relative;
+
     -webkit-user-select: none;
     user-select: none;
 }
